Fix double border above Instructions

--- a/addons/scratch3to2/project.css
+++ b/addons/scratch3to2/project.css
@@ -398,7 +398,7 @@ body:not(.sa-body-editor) [class*="stage_green-flag-overlay_"] > img {
   font-size: 13px;
   line-height: 28px;
 }
-.preview .description-block {
+.preview .sa-project-tabs-wrapper + .description-block {
   border-top: 1px solid var(--darkWww-border, #ddd);
 }
 
